--- a/MIPT/Interface_development__layout and JavaScript/course2/1stWeek/miandieks-murrrkiet/index.html
+++ b/MIPT/Interface_development__layout and JavaScript/course2/1stWeek/miandieks-murrrkiet/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="css.css" rel="stylesheet" type="text/css"/>
-
+    <link href="rate.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <ul class="cats">
@@ -15,7 +15,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 1</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate"> ⭐⭐⭐</div> 
+                <div class="cat__info__rate"> 
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name" type="radio" class="ratingstar" value="1">
+                                <input name="name" type="radio" class="ratingstar" value="2">
+                                <input name="name" type="radio" class="ratingstar" value="3">
+                                <input name="name" type="radio" class="ratingstar" value="4">
+                                <input name="name" type="radio" class="ratingstar" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -28,7 +39,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 2</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name1" class="ratingstar" type="radio" value="1">
+                                <input name="name1" class="ratingstar" type="radio" value="2">
+                                <input name="name1" class="ratingstar" type="radio" value="3">
+                                <input name="name1" class="ratingstar" type="radio" value="4">
+                                <input name="name1" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -41,7 +63,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 3</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name2" class="ratingstar" type="radio" value="1">
+                                <input name="name2" class="ratingstar" type="radio" value="2">
+                                <input name="name2" class="ratingstar" type="radio" value="3">
+                                <input name="name2" class="ratingstar" type="radio" value="4">
+                                <input name="name2" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -54,7 +87,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 4</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input  name="name3" class="ratingstar" type="radio" value="1">
+                                <input name="name3" class="ratingstar" type="radio" value="2">
+                                <input name="name3" class="ratingstar" type="radio" value="3">
+                                <input name="name3" class="ratingstar" type="radio" value="4">
+                                <input name="name3" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -67,7 +111,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 5</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input  name="name4" class="ratingstar" type="radio" value="1">
+                                <input name="name4" class="ratingstar" type="radio" value="2">
+                                <input name="name4" class="ratingstar" type="radio" value="3">
+                                <input name="name4" class="ratingstar" type="radio" value="4">
+                                <input name="name4" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -80,7 +135,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 6</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name5" class="ratingstar" type="radio" value="1">
+                                <input name="name5" class="ratingstar" type="radio" value="2">
+                                <input name="name5" class="ratingstar" type="radio" value="3">
+                                <input name="name5" class="ratingstar" type="radio" value="4">
+                                <input name="name5" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -93,7 +159,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 7</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name6" class="ratingstar" type="radio" value="1">
+                                <input name="name6" class="ratingstar" type="radio" value="2">
+                                <input name="name6" class="ratingstar" type="radio" value="3">
+                                <input name="name6" class="ratingstar" type="radio" value="4">
+                                <input name="name6" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -106,7 +183,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 8</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name7" class="ratingstar" type="radio" value="1">
+                                <input name="name7" class="ratingstar" type="radio" value="2">
+                                <input name="name7" class="ratingstar" type="radio" value="3">
+                                <input name="name7" class="ratingstar" type="radio" value="4">
+                                <input name="name7" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -119,7 +207,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 9  очень большой фамилией</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name8" class="ratingstar" type="radio" value="1">
+                                <input name="name8" class="ratingstar" type="radio" value="2">
+                                <input name="name8" class="ratingstar" type="radio" value="3">
+                                <input name="name8" class="ratingstar" type="radio" value="4">
+                                <input name="name8" class="ratingstar" type="radio" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
@@ -132,7 +231,18 @@
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 10</a></div> 
                 <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
-                <div class="cat__info__rate">уровень доброты котика по 5-балльной шкале (как звездочки на макетах);</div> 
+                <div class="cat__info__rate">
+                    <fieldset>
+                        <legend>Доброта</legend>
+                            <div class="cat__info__rate_group">
+                                <input name="name9" class="ratingstar" type="radio" class="ratingstar" value="1">
+                                <input name="name9" class="ratingstar" type="radio" class="ratingstar" value="2">
+                                <input name="name9" class="ratingstar" type="radio" class="ratingstar" value="3">
+                                <input name="name9" class="ratingstar" type="radio" class="ratingstar" value="4">
+                                <input name="name9" class="ratingstar" type="radio" class="ratingstar" value="5">
+                            </div>
+                    </fieldset>
+                </div> 
                 <div class="cat__info__price">10 000 <span>12 000</span></div>
             </div>
             <div class="cat__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
