--- a/MIPT/Interface_development__layout and JavaScript/course2/1stWeek/miandieks-murrrkiet/index.html
+++ b/MIPT/Interface_development__layout and JavaScript/course2/1stWeek/miandieks-murrrkiet/index.html
@@ -9,6 +9,11 @@
     <link href="rate.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+
+        <legend>вид списка</legend>
+        <input class="toggle" name="toggle" type="checkbox" value="plitka">карточки
+        <!-- <input  class="toggle" name="toggle" type="radio"  value="list">список -->
+
     <ul class="cats">
         <li class="cat">
             <div class="cat__photo"><img alt="cat1" src="images/cat1.png"></div>
