--- a/MIPT/Interface_development__layout and JavaScript/course2/1stWeek/miandieks-murrrkiet/index.html
+++ b/MIPT/Interface_development__layout and JavaScript/course2/1stWeek/miandieks-murrrkiet/index.html
@@ -16,10 +16,10 @@
 
     <ul class="cats">
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat1.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat1.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 1</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate"> 
                     <fieldset>
                         <legend>Доброта</legend>
@@ -40,10 +40,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat2.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat2.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 2</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -64,10 +64,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat3.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat3.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 3</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -88,10 +88,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat4.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat4.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 4</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -112,10 +112,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat5.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat5.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 5</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -136,10 +136,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat6.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat6.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 6</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -160,10 +160,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat7.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat7.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 7</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -184,10 +184,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat8.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat8.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 8</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -208,10 +208,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat9.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat9.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 9  очень большой фамилией</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
@@ -232,10 +232,10 @@
                   ducimus quis odit. </div>
         </li>
         <li class="cat">
-            <div class="cat__photo"><img alt="cat1" src="images/cat10.png"></div>
+            <div class="cat__photo"><a href="#openModal"><img alt="cat1" src="images/cat10.png"></div>
             <div class="cat__info">
                 <div class="cat__info__name"><a href='#'>Котик 10</a></div> 
-                <div class="cat__info__category">Котики >> <a href="#">Домашние</a></div>
+                <div class="cat__info__category">Котики >> <a href="#openModal">Домашние</a></div>
                 <div class="cat__info__rate">
                     <fieldset>
                         <legend>Доброта</legend>
