--- a/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/index.html
+++ b/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/index.html
@@ -128,8 +128,57 @@
                     </div>
                 </div>
             </li>
+            <li>
+                <div class="good__card">
+                    <div class="good__card__img">
+                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                    </div>
+                    <div class="good__card__description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
+                        ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
+                        unde facilis.
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="good__card">
+                    <div class="good__card__img">
+                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                    </div>
+                    <div class="good__card__description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
+                        ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
+                        unde facilis.
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="good__card">
+                    <div class="good__card__img">
+                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                    </div>
+                    <div class="good__card__description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
+                        ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
+                        unde facilis.
+                    </div>
+                </div>
+            </li>
         </ul>
-        <div class="controls"></div>
+        <ul class="control">
+            <li>
+                <input name="slider" type="radio" class="radioButton1">
+            </li>
+            <li>
+                <input name="slider" type="radio" class="radioButton2">
+            </li>
+            <li>
+                <input name="slider" type="radio" class="radioButton3">
+            </li>
+        </ul>
     </div>
 </body>
 </html>
