--- a/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/index.html
+++ b/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/index.html
@@ -16,7 +16,7 @@
                         <a href="#openModal"><img src="./img/1.png" alt="parsley"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        -1Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -26,10 +26,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/2.png" alt="2"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        0Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -39,10 +39,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/3.png" alt="3"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        1Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -52,11 +52,11 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/4.png" alt="4"></a>
                     </div>
                     <div class="good__card__description">
                         <span>mint</span>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        2Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -66,10 +66,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/5.png" alt="5"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        3Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -79,10 +79,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/6.png" alt="6"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        4Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -92,10 +92,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/7.png" alt="7"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        5Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -105,10 +105,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/8.png" alt="8"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        6Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -118,10 +118,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/9.png" alt="9"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        7Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -131,10 +131,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/10.png" alt="10"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        8Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -144,10 +144,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/11.png" alt="11"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        9Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -157,10 +157,10 @@
             <li>
                 <div class="good__card">
                     <div class="good__card__img">
-                        <a href="#openModal"><img src="./img/1.png" alt="1"></a>
+                        <a href="#openModal"><img src="./img/12.png" alt="12"></a>
                     </div>
                     <div class="good__card__description">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
+                        10Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem praesentium,
                         aperiam, nisi obcaecati necessitatibus quidem rerum possimus voluptatibus 
                         ipsam dignissimos dolorum rem porro repudiandae, sit eligendi minus placeat
                         unde facilis.
@@ -179,6 +179,13 @@
                 <input name="slider" type="radio" class="radioButton3">
             </li>
         </ul>
+    </div>
+
+    <input name="close" type="checkbox" class="close">
+    <div class="modal">
+        <div class="image">
+            <img src="./img/1.png" alt="1">
+        </div>
     </div>
 </body>
 </html>
